sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:7: error: not found: value posBABouger
    posBABouger = (getHoleBase()-1)%nbrB;
    ^NaiveBaseball:10: error: not found: value posBABouger
    numABouger = longerWay(nbrB, posBABouger)
                                 ^NaiveBaseball:11: error: not found: value posBABouger
    move(posBABouger,numABouger)
         ^