sort.baseball.NaiveBaseball.scala.code
override def run() {
  var nbrB:Int = getBasesAmount();
  var posJABouger:Int = 0;
  var numABouger:Int = 0;
  
  while (!isSorted()) {
    posBABouger = (getHoleBase()-1)%nbrB;
    
    
    numABouger = longerWay(nbrB, posBABouger)
    move(posBABouger,numABouger)
  }
}

def longerWay(nbrB:Int, numBase:Int):Int ={
  var player1:Int = getPlayerColor(numBase,0);
  var player2:Int = getPlayerColor(numBase,1);
  var lP1:Int = player1-numBase;
  var lP2:Int = player2-numBase;
  
  if (player1 == numBase){
    return player2
  }
  if (lP1 < 0) {
    lP1 += nbrB
  }

  if (lP2 < 0) {
    lP2 += nbrB
  }  
  
  if (lP1 > lP2) {
    return 0
  }
  else {
    return 1
  }
  
}